fixed the collapsing nav bar and nav bar justification

--- a/Assets/styles.css
+++ b/Assets/styles.css
@@ -15,10 +15,6 @@ h2 {
   color: rgb(26, 100, 98);
 }
 
-.navbar-brand {
-  font-size: 36px;
-}
-
 .nav-link {
   font-size: 18px;
 }
